force-app/main/default/objects/ssot__SurveyQuestionResponse__dlm/fields/ssot__BooleanValue__c.field-meta.xml
<CustomField>
    <fullName>ssot__BooleanValue__c</fullName>
    <label>Boolean Value</label>
    <length>5</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>BooleanValue</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>