force-app/main/default/objects/ssot__SurveyQuestionResponse__dlm/fields/ssot__CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__CreatedDate__c</fullName>
    <label>Created Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CreatedDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>DateTime</type>
</CustomField>