force-app/main/default/objects/ssot__SurveyQuestionResponse__dlm/fields/ssot__Datatype__c.field-meta.xml
<CustomField>
    <fullName>ssot__Datatype__c</fullName>
    <label>Data Type</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>Datatype</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>