force-app/main/default/objects/ssot__SurveyQuestionResponse__dlm/fields/ssot__DateValue__c.field-meta.xml
<CustomField>
    <fullName>ssot__DateValue__c</fullName>
    <label>Date Value</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DateValue</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>