force-app/main/default/objects/ssot__SurveyQuestionResponse__dlm/fields/ssot__rel_1697761227748_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761227748_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SurveyQuestionResponse_SurveyRespons_rel</label>
    <referenceTo>ssot__SurveyResponse__dlm</referenceTo>
    <relationshipLabel>SurveyQuestionResponse_SurveyRespons_rel</relationshipLabel>
    <relationshipName>rel_1697761227748_end</relationshipName>
    <type>Lookup</type>
</CustomField>