force-app/main/default/objects/ssot__SurveyQuestionResponse__dlm/fields/ssot__SurveyQuestionId__c.field-meta.xml
<CustomField>
    <fullName>ssot__SurveyQuestionId__c</fullName>
    <label>Survey Question</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SurveyQuestionId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>